Utils/AutoZoom/Utils/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VC++_Examples/Setup_Example/ARC_SpectraPro_dll.h

// function definitions
typedef unsigned _int16 (CALLBACK* LPFNDLL_Ver) (long &, long &, long &);
//Communications
typedef unsigned _int16 (CALLBACK* LPFNDLL_Search_For_Mono) (long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Open_Mono) (long,long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Close_Mono) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Valid_Mono_Enum) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Focallength) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_HalfAngle) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_DetectorAngle) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Double) (long, unsigned _int16 &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Precision) (long);
//Wavelength
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_nm) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_ang) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_ang) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_eV) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_eV) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_micron) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_micron) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_absCM) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_absCM) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_relCM) (long, double, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_relCM) (long, double, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Cutoff_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Min_nm) (long, double &);
//Grating
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Turret) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Turret) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Turret_Gratings) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Grating) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Density) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Installed) (long, long);
//Mirrors
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Diverter_Valid) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Diverter_Pos) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Diverter_Pos) (long, long, long);
//Slits
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Slit_Type) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Slit_Width) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Slit_Width) (long, long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Slit_Home) (long, long);
//Filter
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Present) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Position) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Filter_Position) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Min_Pos) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Max_Pos) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Filter_Home) (long);
// advanced functions
// Gear
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Int_Led_On) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Int_Led) (long, int);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Motor_Int) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wheel_Int) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Move_Steps) (long, long);
// Grating Values
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Init_Grating) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Init_Grating) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Init_Wave_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Init_Wave_nm) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Init_ScanRate_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Init_ScanRate_nm) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Offset) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Gadjust) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Grating_Offset) (long, long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Grating_Gadjust) (long, long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Grating_Calc_Offset) (long, long, double, double, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Grating_Calc_Gadjust) (long, long, double, double, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Reset) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Restore_Factory_Settings) (long);
// Scan Values
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Scan_Rate_nm_min)  (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Scan_Rate_nm_min)  (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Start_Scan_To_nm)  (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Scan_Done)  (long, long &, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Start_Jog)  (long, long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Stop_Jog)  (long);
LPFNDLL_Ver ARC_Ver;       // function pointer to ARC_Ver
//Communications
LPFNDLL_Search_For_Mono                ARC_Search_For_Mono;
LPFNDLL_Open_Mono                      ARC_Open_Mono;
LPFNDLL_Close_Mono                     ARC_Close_Mono;
LPFNDLL_Valid_Mono_Enum                ARC_Valid_Mono_Enum;
LPFNDLL_get_Mono_Focallength           ARC_get_Mono_Focallength;
LPFNDLL_get_Mono_HalfAngle             ARC_get_Mono_HalfAngle;
LPFNDLL_get_Mono_DetectorAngle         ARC_get_Mono_DetectorAngle;
LPFNDLL_get_Mono_Double                ARC_get_Mono_Double;
LPFNDLL_get_Mono_Precision             ARC_get_Mono_Precision;
//Wavelength
LPFNDLL_get_Mono_Wavelength_nm         ARC_get_Mono_Wavelength_nm;
LPFNDLL_set_Mono_Wavelength_nm         ARC_set_Mono_Wavelength_nm;
LPFNDLL_get_Mono_Wavelength_ang        ARC_get_Mono_Wavelength_ang;
LPFNDLL_set_Mono_Wavelength_ang        ARC_set_Mono_Wavelength_ang;
LPFNDLL_get_Mono_Wavelength_eV         ARC_get_Mono_Wavelength_eV;
LPFNDLL_set_Mono_Wavelength_eV         ARC_set_Mono_Wavelength_eV;
LPFNDLL_get_Mono_Wavelength_micron     ARC_get_Mono_Wavelength_micron;
LPFNDLL_set_Mono_Wavelength_micron     ARC_set_Mono_Wavelength_micron;
LPFNDLL_get_Mono_Wavelength_absCM      ARC_get_Mono_Wavelength_absCM;
LPFNDLL_set_Mono_Wavelength_absCM      ARC_set_Mono_Wavelength_absCM;
LPFNDLL_get_Mono_Wavelength_relCM      ARC_get_Mono_Wavelength_relCM;
LPFNDLL_set_Mono_Wavelength_relCM      ARC_set_Mono_Wavelength_relCM;
LPFNDLL_get_Mono_Wavelength_Cutoff_nm  ARC_get_Mono_Wavelength_Cutoff_nm;
LPFNDLL_get_Mono_Wavelength_Min_nm     ARC_get_Mono_Wavelength_Min_nm;
//Grating
LPFNDLL_get_Mono_Turret                ARC_get_Mono_Turret;
LPFNDLL_set_Mono_Turret                ARC_set_Mono_Turret;
LPFNDLL_get_Mono_Turret_Gratings       ARC_get_Mono_Turret_Gratings;
LPFNDLL_get_Mono_Grating               ARC_get_Mono_Grating;
LPFNDLL_set_Mono_Grating               ARC_set_Mono_Grating;
LPFNDLL_get_Mono_Grating_Density       ARC_get_Mono_Grating_Density;
LPFNDLL_get_Mono_Grating_Installed     ARC_get_Mono_Grating_Installed;
//Mirrors
LPFNDLL_get_Mono_Diverter_Valid        ARC_get_Mono_Diverter_Valid;
LPFNDLL_get_Mono_Diverter_Pos          ARC_get_Mono_Diverter_Pos;
LPFNDLL_set_Mono_Diverter_Pos          ARC_set_Mono_Diverter_Pos;
//Slits
LPFNDLL_get_Mono_Slit_Type             ARC_get_Mono_Slit_Type;
LPFNDLL_get_Mono_Slit_Width            ARC_get_Mono_Slit_Width;
LPFNDLL_set_Mono_Slit_Width            ARC_set_Mono_Slit_Width;
LPFNDLL_Mono_Slit_Home                 ARC_Mono_Slit_Home;
//Filter
LPFNDLL_get_Mono_Filter_Present        ARC_get_Mono_Filter_Present;
LPFNDLL_get_Mono_Filter_Position       ARC_get_Mono_Filter_Position;
LPFNDLL_set_Mono_Filter_Position       ARC_set_Mono_Filter_Position;
LPFNDLL_get_Mono_Filter_Min_Pos        ARC_get_Mono_Filter_Min_Pos;
LPFNDLL_get_Mono_Filter_Max_Pos        ARC_get_Mono_Filter_Max_Pos;
LPFNDLL_Mono_Filter_Home               ARC_Mono_Filter_Home;
// advanced functions
// Gear
LPFNDLL_get_Mono_Int_Led_On            ARC_get_Mono_Int_Led_On;
LPFNDLL_set_Mono_Int_Led               ARC_set_Mono_Int_Led;
LPFNDLL_get_Mono_Motor_Int             ARC_get_Mono_Motor_Int;
LPFNDLL_get_Mono_Wheel_Int             ARC_get_Mono_Wheel_Int;
LPFNDLL_Mono_Move_Steps                ARC_Mono_Move_Steps;
// Grating Values
LPFNDLL_get_Mono_Init_Grating          ARC_get_Mono_Init_Grating;
LPFNDLL_set_Mono_Init_Grating          ARC_set_Mono_Init_Grating;
LPFNDLL_get_Mono_Init_Wave_nm          ARC_get_Mono_Init_Wave_nm;
LPFNDLL_set_Mono_Init_Wave_nm          ARC_set_Mono_Init_Wave_nm;
LPFNDLL_get_Mono_Init_ScanRate_nm      ARC_get_Mono_Init_ScanRate_nm;
LPFNDLL_set_Mono_Init_ScanRate_nm      ARC_set_Mono_Init_ScanRate_nm;
LPFNDLL_get_Mono_Grating_Offset        ARC_get_Mono_Grating_Offset;
LPFNDLL_get_Mono_Grating_Gadjust       ARC_get_Mono_Grating_Gadjust;
LPFNDLL_set_Mono_Grating_Offset        ARC_set_Mono_Grating_Offset;
LPFNDLL_set_Mono_Grating_Gadjust       ARC_set_Mono_Grating_Gadjust;
LPFNDLL_Mono_Grating_Calc_Offset       ARC_Mono_Grating_Calc_Offset;
LPFNDLL_Mono_Grating_Calc_Gadjust      ARC_Mono_Grating_Calc_Gadjust;
LPFNDLL_Mono_Reset                     ARC_Mono_Reset;
LPFNDLL_Mono_Restore_Factory_Settings  ARC_Mono_Restore_Factory_Settings;
// Scan Values
LPFNDLL_get_Mono_Scan_Rate_nm_min      ARC_get_Mono_Scan_Rate_nm_min;
 
LPFNDLL_set_Mono_Scan_Rate_nm_min      ARC_set_Mono_Scan_Rate_nm_min;
 
LPFNDLL_Mono_Start_Scan_To_nm          ARC_Mono_Start_Scan_To_nm;
LPFNDLL_Mono_Scan_Done                 ARC_Mono_Scan_Done;
 
LPFNDLL_Mono_Start_Jog                 ARC_Mono_Start_Jog;
 
LPFNDLL_Mono_Stop_Jog                  ARC_Mono_Stop_Jog;