Utils/AutoZoom/Utils/PrincetonInstruments/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VB_Examples/Advanced_Use/Advanced_Dll_Use.frm

Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = False
'ARC_SpectraPro.dll functions
'High level Communications
Private Declare Function ARC_Search_For_Mono Lib "ARC_SpectraPro.dll" (Num_Found As Long) As Integer
Private Declare Function ARC_Open_Mono Lib "ARC_SpectraPro.dll" (ByVal Enum_Num As Long, Mono_Enum As Long) As Integer
Private Declare Function ARC_Close_Mono Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_Valid_Mono_Enum Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_get_Mono_preOpen_Model Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Model_Var As Variant) As Integer
Private Declare Function ARC_Ver Lib "ARC_SpectraPro.dll" (Majorval As Long, Minorval As Long, Buildval As Long) As Integer
'Direct Communications Function
Private Declare Function ARC_Send_CMD_To_Mono Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal SendCMD As Variant, RCV_Var As Variant, ByVal ms_Timeout As Long) As Integer

'Monochromator Information
Private Declare Function ARC_get_Mono_Model Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Model_str As Variant) As Integer
Private Declare Function ARC_get_Mono_Serial Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Serial_str As Variant) As Integer
Private Declare Function ARC_get_Mono_Focallength Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Focallength As Double) As Integer
Private Declare Function ARC_get_Mono_HalfAngle Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, HalfAngle As Double) As Integer
Private Declare Function ARC_get_Mono_DetectorAngle Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, DetectorAngle As Double) As Integer
Private Declare Function ARC_get_Mono_Double Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Double_Present As Integer) As Integer
Private Declare Function ARC_get_Mono_Precision Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Long

'Monochromator Wavelength
Private Declare Function ARC_get_Mono_Wavelength_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_ang Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_ang Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_eV Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_eV Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_micron Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_micron Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_absCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_absCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_relCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Center_nm As Double, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_relCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Center_nm As Double, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_Cutoff_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_Min_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer

'Monochromator Grating
Private Declare Function ARC_get_Mono_Turret Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Turret As Long) As Integer
Private Declare Function ARC_set_Mono_Turret Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Turret As Long) As Integer
Private Declare Function ARC_get_Mono_Turret_Gratings Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Gratings_Per_Turret As Long) As Integer
Private Declare Function ARC_get_Mono_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Grating As Long) As Integer
Private Declare Function ARC_set_Mono_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long) As Integer
Private Declare Function ARC_get_Mono_Grating_Blaze Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Blaze_Var As Variant) As Integer
Private Declare Function ARC_get_Mono_Grating_Density Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Groove_MM As Long) As Integer
Private Declare Function ARC_get_Mono_Grating_Installed Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long) As Integer

'Monochromator Diverter Mirrors
Private Declare Function ARC_get_Mono_Diverter_Valid Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long) As Integer
Private Declare Function ARC_get_Mono_Diverter_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, Diverter_Pos As Long) As Integer
Private Declare Function ARC_set_Mono_Diverter_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, ByVal Diverter_Pos As Long) As Integer
Private Declare Function ARC_get_Mono_Diverter_Pos_Var Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, Diverter_Pos As Variant) As Integer

'Monochromator Slits
Private Declare Function ARC_get_Mono_Slit_Type Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Type As Long) As Integer
Private Declare Function ARC_get_Mono_Slit_Type_Var Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Type As Variant) As Integer
Private Declare Function ARC_get_Mono_Slit_Width Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Width As Long) As Integer
Private Declare Function ARC_set_Mono_Slit_Width Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, ByVal Slit_Width As Long) As Integer
Private Declare Function ARC_Mono_Slit_Home Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long) As Integer
Private Declare Function ARC_Mono_Slit_Name_Var Lib "ARC_SpectraPro.dll" (ByVal Slit_Num As Long, Slit_Name_Var As Variant) As Integer

'Monochromator Filter Wheel (not available on all models)
Private Declare Function ARC_get_Mono_Filter_Present Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Position Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_set_Mono_Filter_Position Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Position As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Min_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Max_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_Mono_Filter_Home Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer

'advanced functions
'Gear
Private Declare Function ARC_get_Mono_Int_Led_On Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_set_Mono_Int_Led Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Led_State As Integer) As Integer
Private Declare Function ARC_get_Mono_Motor_Int Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_get_Mono_Wheel_Int Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_Mono_Move_Steps Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Num_Steps As Long) As Integer

'Grating Values
Private Declare Function ARC_get_Mono_Init_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Init_Grating As Long) As Integer
Private Declare Function ARC_set_Mono_Init_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Init_Grating As Long) As Integer
Private Declare Function ARC_get_Mono_Init_Wave_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Init_Wave As Double) As Integer
Private Declare Function ARC_set_Mono_Init_Wave_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Init_Wave As Double) As Integer
Private Declare Function ARC_get_Mono_Init_ScanRate_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Init_ScanRate As Double) As Integer
Private Declare Function ARC_set_Mono_Init_ScanRate_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Init_ScanRate As Double) As Integer
Private Declare Function ARC_get_Mono_Grating_Offset Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Offset As Long) As Integer
Private Declare Function ARC_get_Mono_Grating_Gadjust Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Gadjust As Long) As Integer
Private Declare Function ARC_set_Mono_Grating_Offset Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, ByVal Offset As Long) As Integer
Private Declare Function ARC_set_Mono_Grating_Gadjust Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, ByVal Gadjust As Long) As Integer
Private Declare Function ARC_Mono_Grating_Calc_Offset Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, ByVal Wave As Double, ByVal RefWave As Double, newOffset As Long) As Integer
Private Declare Function ARC_Mono_Grating_Calc_Gadjust Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, ByVal Wave As Double, ByVal RefWave As Double, newGadjust As Long) As Integer
Private Declare Function ARC_Mono_Grating_UnInstall Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long) As Integer
Private Declare Function ARC_Mono_Grating_Install Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, ByVal Density As Long, ByVal Blaze As Variant, ByVal NMBlaze As Long, ByVal HOLBlaze As Long, ByVal MIRROR As Long) As Integer
Private Declare Function ARC_Mono_Reset Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_Mono_Restore_Factory_Settings Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_Mono_Save_Factory_Settings Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal password As Double) As Integer

'Scan Values
Private Declare Function ARC_get_Mono_Scan_Rate_nm_min Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Scan_Rate As Double) As Integer
Private Declare Function ARC_set_Mono_Scan_Rate_nm_min Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Scan_Rate As Double) As Integer
Private Declare Function ARC_Mono_Start_Scan_To_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength_nm As Double) As Integer
Private Declare Function ARC_Mono_Scan_Done Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Done_Moving As Long, Current_Wavelength_nm As Double) As Integer
' ARC_Mono_Start_Jog is use is limited in the VB development enviroment due to language/compiler limitations
Private Declare Function ARC_Mono_Start_Jog Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Jog_MaxRate As Long, ByVal JogUp As Long) As Integer
Private Declare Function ARC_Mono_Stop_Jog Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer

' the current monochromator
Dim Mono_Enum As Long
